Commit No. 2: Implement LiveData to Sync Activity and Fragment UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,20 @@
         android:id="@+id/text_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_total"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:text="Total: 0"/>
 
     <Button
         android:id="@+id/button_increment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_increment"/>
+        android:text="Press Me"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
+        android:name="com.example.lab_week_10.FirstFragment"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"/>
 </LinearLayout>
